feat: search username
